--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,6 +14,7 @@ ul li {
 }
 
 .contact {
+  float: left;
   padding-left: 10%;
   padding-top: 1.5px;
 }
@@ -21,7 +22,80 @@ ul li {
   padding-left: 1em;
 }
 
-.share {
+.share{
   float: right;
   padding-right: 10%;
+}
+.bot {
+  width: 100%;
+  height: 50px;
+}
+.logo a {
+  color: yellow;
+  font-style: bold;
+  font-size: 35px;
+  text-decoration: none;
+  float: left;
+  padding-left: 5%;
+}
+.nav a {
+  float: left;
+  text-decoration: none;
+  color: black;
+  padding-left: 7%;
+  padding-right: 0;
+  padding-top: 15px;
+}
+.home a {
+  text-decoration: none;
+  color: yellow;
+}
+.acceuil {
+  width: 100%;
+  position: fixed;
+}
+.block {
+  height: 300px;
+  width: 300px;
+  background-color: rgba(0,0,0,0.8);
+  position: absolute;
+  padding-top: 0px;
+  float: left;
+  margin-left: 200px;
+  margin-top: 150px;
+}
+.titre-block {
+  color: white;
+  font-size: 25px;
+  font-style: bold;
+  text-align: center;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 0;
+}
+.top-block {
+  border-bottom: 2px solid yellow;
+}
+.bot-block {
+  color: white;
+  font-size: 18px;
+  font-style: bold;
+  text-align: center;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 0;
+}
+.bot-button {
+  color: black;
+  float: right;
+  padding-bottom: 0;
+}
+.title-text-middle {
+  font-size: 45px;
+  font-style: bold;
+  padding-left: 2%;
+}
+
+.middle {
+  margin-top:auto;
 }
