--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -80,15 +80,25 @@ height: 500px;
   color: white;
   font-size: 18px;
   font-style: bold;
-  text-align: center;
-  padding-left: 2%;
-  padding-right: 2%;
-  padding-top: 0;
+  text-align: left;
+  margin-left: 15%;
+  margin-right: 15%;
 }
 .bot-button {
-  color: black;
-  float: right;
-  padding-bottom: 0;
+  width: 150px;
+  height: 40px;
+  background-color: black;
+  float: left;
+  border-radius: 30px;
+  border: 1px solid white;
+  margin-left: 10%;
+  margin-top: 5%;
+}
+.text-button1 {
+  text-align: center;
+  color: white;
+  margin-top: 10px;
+  font-size: 15px;
 }
 .title-text-middle {
   font-size: 45px;
@@ -117,13 +127,38 @@ height: 500px;
   color: white;
 }
 .service {
-  background-color: grey;
+  background-color: #DADBDB;
   width: 100%;
   height: 800px;
+}
+h2 {
+  text-align: center;
+}
+.text-service {
+  text-align: center;
 }
 .photos {
   width: 80%;
   height: 600px;
   background-color: white;
   float: left;
+  margin-left: 140px;
+}
+.photo {
+  width: 33.33%;
+  float: left;
+}
+.photo-img {
+  width: 100%;
+}
+
+.photo-img img {
+  width: 100%;
+}
+.text-photos {
+  float: left;
+  width: 100%;
+}
+h3 {
+  text-align: center;
 }
