--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -133,16 +133,19 @@ height: 500px;
 }
 h2 {
   text-align: center;
+  padding-top: 3%;
+  font-size: 30px;
 }
 .text-service {
   text-align: center;
 }
 .photos {
   width: 80%;
-  height: 600px;
+  height: 450px;
   background-color: white;
   float: left;
   margin-left: 140px;
+  margin-top: 1.5%;
 }
 .photo {
   width: 33.33%;
@@ -161,4 +164,32 @@ h2 {
 }
 h3 {
   text-align: center;
+}
+.service-button {
+  width: 175px;
+  height: 50px;
+  background-color: yellow;
+  float: right;
+  border-radius: 30px;
+  margin-right: 42%;
+  margin-top: 13%;
+}
+.recent-projects {
+  width: 100%;
+  height: 750px;
+}
+.text-projects {
+  text-align: center;
+}
+.img-slide {
+  margin-top: 3%;
+}
+.photo-about {
+  float: left;
+  margin-left: 5%;
+  margin-top: 5%;
+  width: 50%;
+}
+.text-about {
+  width: 50%;
 }
